obrazky oprava destinace

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="categories">
             <a href="#" class="categories__item">
                 <figure>
-                    <img src="./assets/images/pariz.jpg" class="categories__item-image img-responsive" alt="Paříž a Eifell Tower (Francie) – jedna z nejnavštěvovanějších turistických destinací">
+                    <img src="./TrCile/assets/images/pariz.jpg" class="categories__item-image img-responsive" alt="Paříž a Eifell Tower (Francie) – jedna z nejnavštěvovanějších turistických destinací">
                     <figcaption class="categories__item-description">
                         <h2 class="heading">Paříž</h2>
                         <small>od 1850&nbsp;Kč</small>
@@ -26,7 +26,7 @@
             </a>
             <a href="#" class="categories__item">
                 <figure>
-                    <img src="./assets/images/mallorca.jpg" class="categories__item-image img-responsive" alt="Palma De Malorca – jedna z nejnavštěvovanějších turistických destinací">
+                    <img src="./TrCile/assets/images/mallorca.jpg" class="categories__item-image img-responsive" alt="Palma De Malorca – jedna z nejnavštěvovanějších turistických destinací">
                     <figcaption class="categories__item-description">
                         <h2 class="heading">Palma De Mallorca</h2>
                         <small>od 1260&nbsp;Kč</small>
@@ -35,7 +35,7 @@
             </a>
             <a href="#" class="categories__item">
                 <figure>
-                    <img src="./assets/images/egypt.jpg" class="categories__item-image img-responsive" alt="Egypt – jedna z nejnavštěvovanějších turistických destinací">
+                    <img src="./TrCile/assets/images/egypt.jpg" class="categories__item-image img-responsive" alt="Egypt – jedna z nejnavštěvovanějších turistických destinací">
                     <figcaption class="categories__item-description">
                         <h2 class="heading">Egypt</h2>
                         <small>od 6800&nbsp;Kč</small>
